
 OpenSSL CHANGES
 _______________

 Changes between 1.0.1 and 1.1.0  [xx XXX xxxx]

  *) Update Windows build system for FIPS. Don't compile algorithm test
     utilties by default: the target build_tests is needed for that. Add
     support for building fips_algvs with the build_algvs target.
     [Steve Henson]

  *) Add initial cross compilation support for Windows build. The following
     environment variables should be set:

     FIPS_SHA1_PATH: path to fips_standalone_sha1 exectutable which will
     be used explicitly and not built.
     FIPS_SIG: similar to other builds: path to a "get signature" script
     which is used to obtain the signature of the target instead of
     executing it on the host.
     [Steve Henson]

  *) Add flag to EC_KEY to use cofactor ECDH if set.
     [Steve Henson]

  *) Update fips_test_suite to support multiple command line options. New
     test to induce all self test errors in sequence and check expected
     failures.
     [Steve Henson]

  *) Add FIPS_{rsa,dsa,ecdsa}_{sign,verify} functions which digest and
     sign or verify all in one operation.
     [Steve Henson]

  *) Add fips_algvs: a multicall fips utility incorporaing all the algorithm
     test programs and fips_test_suite. Includes functionality to parse
     the minimal script output of fipsalgest.pl directly.
     [Steve Henson]

  *) Add authorisation parameter to FIPS_module_mode_set().
     [Steve Henson]

  *) Add FIPS selftest for ECDH algorithm using P-224 and B-233 curves.
     [Steve Henson]

  *) Use separate DRBG fields for internal and external flags. New function
     FIPS_drbg_health_check() to perform on demand health checking. Add
     generation tests to fips_test_suite with reduced health check interval to 
     demonstrate periodic health checking. Add "nodh" option to
     fips_test_suite to skip very slow DH test.
     [Steve Henson]

  *) New function FIPS_get_cipherbynid() to lookup FIPS supported ciphers
     based on NID.